force-app/main/default/objects/Job_Cards__c/fields/Relevant_Dept__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Dept__c</fullName>
    <inlineHelpText>This will determine the Department who will receive the Work Order once you click SUBMIT.</inlineHelpText>
    <label>Relevant Dept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HV - Auto Elec - Roma</fullName>
                <label>Auto Elec (HV) - Roma</label>
            </value>
            <value>
                <fullName>HV - Roma</fullName>
                <label>Mech (HV) - Roma</label>
            </value>
            <value>
                <fullName>Mechanical - Roma</fullName>
            </value>
            <value>
                <fullName>Auto Electrician - Roma</fullName>
                <label>Auto Elec - Roma</label>
            </value>
            <value>
                <fullName>Electrical - Roma</fullName>
            </value>
            <value>
                <fullName>Fabrication - Roma</fullName>
            </value>
            <value>
                <fullName>NDT - Roma</fullName>
            </value>
            <value>
                <fullName>General - Roma</fullName>
            </value>
            <value>
                <fullName>Mechanical - Moomba</fullName>
            </value>
            <value>
                <fullName>Auto Electrician - Moomba</fullName>
                <label>Auto Elec - Moomba</label>
            </value>
            <value>
                <fullName>Electrical - Moomba</fullName>
            </value>
            <value>
                <fullName>Fabrication - Mooma</fullName>
                <label>Fabrication - Moomba</label>
            </value>
            <value>
                <fullName>NDT - Moomba</fullName>
            </value>
            <value>
                <fullName>General - Moomba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>