force-app/main/default/objects/Job_Cards__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Job_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>