force-app/main/default/objects/Job_Cards__c/fields/Rig_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rig_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Rig Manager should view the task is completed correctly and approve</inlineHelpText>
    <label>Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Orders (Approving Rig Manager)</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>