force-app/main/default/objects/Job_Cards__c/fields/Risk_Assessment_Attached__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Attached__c</fullName>
    <inlineHelpText>It is compulsary to have a completed Risk Assessment attached prior to final approval of Work Order</inlineHelpText>
    <label>Risk Assessment Attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <default>true</default>
                <label>YES</label>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>