force-app/main/default/objects/Job_Cards__c/fields/Safety_Critical_Item__c.field-meta.xml
<CustomField>
    <fullName>Safety_Critical_Item__c</fullName>
    <inlineHelpText>As per items/asset from Safety Critical Register</inlineHelpText>
    <label>Safety Critical Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>