force-app/main/default/objects/Job_Cards__c/fields/Schedular__c.field-meta.xml
<CustomField>
    <fullName>Schedular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedular</label>
    <referenceTo>Truck_Dockets__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>