force-app/main/default/objects/Job_Cards__c/fields/Service_Attached__c.field-meta.xml
<CustomField>
    <fullName>Service_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Attached</label>
    <type>Checkbox</type>
</CustomField>