force-app/main/default/objects/Job_Cards__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>The source of the request for Change</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External Audit</fullName>
            </value>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>Hazard Observation</fullName>
            </value>
            <value>
                <fullName>Incident, HIPO, Near Miss</fullName>
            </value>
            <value>
                <fullName>Suggestion for Improvement</fullName>
            </value>
            <value>
                <fullName>Safety Meeting</fullName>
            </value>
            <value>
                <fullName>Safety Drill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>