force-app/main/default/objects/Job_Cards__c/fields/SubmitAfterSaving__c.field-meta.xml
<CustomField>
    <fullName>SubmitAfterSaving__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Submit After Saving</label>
    <type>Checkbox</type>
</CustomField>