force-app/main/default/objects/Job_Cards__c/fields/Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to be ticked once the supervisor has completed the list of Work Tasks it will take to complete the work order. The Work Tasks should be completed prior to ordering parts</inlineHelpText>
    <label>Tasks Created</label>
    <type>Checkbox</type>
</CustomField>