force-app/main/default/objects/Job_Cards__c/fields/Total_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Hours__c</fullName>
    <label>Total Travel Hours</label>
    <summarizedField>Work_Task__c.Travel_Time__c</summarizedField>
    <summaryForeignKey>Work_Task__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>