force-app/main/default/objects/Job_Cards__c/fields/Total_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Hours__c</fullName>
    <label>Total Work Hours</label>
    <summarizedField>Work_Task__c.Hours_of_Work__c</summarizedField>
    <summaryForeignKey>Work_Task__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>