force-app/main/default/objects/Job_Cards__c/fields/Type_Model__c.field-meta.xml
<CustomField>
    <fullName>Type_Model__c</fullName>
    <formula>WD_Asset__r.Model__c</formula>
    <label>Type/Model</label>
    <type>Text</type>
</CustomField>