force-app/main/default/objects/Job_Cards__c/fields/Type_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change__c</fullName>
    <inlineHelpText>May select more than one eg.  a modification in equipment may result in document change</inlineHelpText>
    <label>Type of Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Procedure/Process</fullName>
            </value>
            <value>
                <fullName>Organisation Structure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>