force-app/main/default/objects/Job_Cards__c/fields/Type_of_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Maintenance__c</fullName>
    <inlineHelpText>The Work Order cannot be closed until ALL REQUIREMENTS OF THE SPECIFIED SERVICE HAVE BEEN COMPLETED</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Inspection</fullName>
            </value>
            <value>
                <fullName>Truck/Trailer/Dolly A</fullName>
            </value>
            <value>
                <fullName>Truck/Trailer/Dolly B</fullName>
            </value>
            <value>
                <fullName>Truck/Trailer/Dolly C</fullName>
            </value>
            <value>
                <fullName>Type 1 - 250Hrs</fullName>
            </value>
            <value>
                <fullName>Type 2 - 500Hrs</fullName>
            </value>
            <value>
                <fullName>Type 3 - 1000Hrs</fullName>
            </value>
            <value>
                <fullName>Type 4 - 2000Hrs</fullName>
            </value>
            <value>
                <fullName>KM Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>