force-app/main/default/objects/Job_Cards__c/fields/Unit_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Asset__c</fullName>
    <formula>WD_Asset__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assets Current Unit</label>
    <type>Text</type>
</CustomField>