force-app/main/default/objects/Job_Cards__c/fields/Unit_User__c.field-meta.xml
<CustomField>
    <fullName>Unit_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>