force-app/main/default/objects/Job_Cards__c/fields/Units_Current_Site__c.field-meta.xml
<CustomField>
    <fullName>Units_Current_Site__c</fullName>
    <formula>WD_Asset__r.Unit__r.Site__r.Name</formula>
    <label>Units Current Site</label>
    <type>Text</type>
</CustomField>