force-app/main/default/objects/Job_Cards__c/fields/Vin_Number__c.field-meta.xml
<CustomField>
    <fullName>Vin_Number__c</fullName>
    <formula>WD_Asset__r.Vin_Number__c</formula>
    <label>Vin Number</label>
    <type>Text</type>
</CustomField>