force-app/main/default/objects/Job_Cards__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset  #</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>