force-app/main/default/objects/Job_Cards__c/fields/wd_projects__c.field-meta.xml
<CustomField>
    <fullName>wd_projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Projects</label>
    <referenceTo>WD_Projects__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>