force-app/main/default/objects/Job_Cards__c/fields/Work_Requested__c.field-meta.xml
<CustomField>
    <fullName>Work_Requested__c</fullName>
    <inlineHelpText>Make recommendation of what can be done to close out</inlineHelpText>
    <label>Work Requested</label>
    <type>TextArea</type>
</CustomField>