force-app/main/default/objects/Job_Cards__c/fields/Work_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Tasks_Completed__c</fullName>
    <inlineHelpText>Were all assigned work tasks completed</inlineHelpText>
    <label>Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>