force-app/main/default/objects/Job_Cards__c/recordTypes/Fault_Report.recordType-meta.xml
<RecordType>
    <fullName>Fault_Report</fullName>
    <active>true</active>
    <label>Fault Report</label>
</RecordType>