force-app/main/default/objects/Job_Cards__c/recordTypes/Fault_Report_Approval_Pending.recordType-meta.xml
<RecordType>
    <fullName>Fault_Report_Approval_Pending</fullName>
    <active>true</active>
    <label>Fault Report - Approval Pending</label>
</RecordType>