force-app/main/default/objects/Job_Cards__c/recordTypes/Fault_Report_Approved.recordType-meta.xml
<RecordType>
    <fullName>Fault_Report_Approved</fullName>
    <active>true</active>
    <label>Fault Report - Approved</label>
</RecordType>