force-app/main/default/objects/Job_Cards__c/recordTypes/Fault_Report_Pre_Approval.recordType-meta.xml
<RecordType>
    <fullName>Fault_Report_Pre_Approval</fullName>
    <active>true</active>
    <label>Fault Report - Pre Approval</label>
</RecordType>