force-app/main/default/objects/Job_Cards__c/recordTypes/Maintenance_Record.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Record</fullName>
    <active>true</active>
    <label>Maintenance Record</label>
</RecordType>