force-app/main/default/objects/Job_Cards__c/recordTypes/New_Build.recordType-meta.xml
<RecordType>
    <fullName>New_Build</fullName>
    <active>false</active>
    <label>New Build</label>
</RecordType>