force-app/main/default/objects/Job_Cards__c/recordTypes/Scheduled_Service.recordType-meta.xml
<RecordType>
    <fullName>Scheduled_Service</fullName>
    <active>true</active>
    <label>Scheduled Service</label>
</RecordType>