force-app/main/default/objects/Job_Cards__c/validationRules/Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change</fullName>
    <active>true</active>
    <errorConditionFormula>CreatedBy.Profile.Name = &quot;Field Manager - Rig&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Rig Managers are not permitted to change the status for a work order</errorMessage>
</ValidationRule>