force-app/main/default/objects/Job_Cards__c/listViews/Auto_Elec_Jobs.listView-meta.xml
<ListView>
    <fullName>Auto_Elec_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>Unit_of_Asset__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>NHVAS_Asset__c</columns>
    <columns>Details_of_Issue_Work_Requested__c</columns>
    <columns>Relevant_Dept__c</columns>
    <columns>Status__c</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Action__c</columns>
    <columns>Actionby__c</columns>
    <columns>Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Created__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:730</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Fault_Report_Approved</value>
    </filters>
    <filters>
        <field>Relevant_Dept__c</field>
        <operation>equals</operation>
        <value>HV - Auto Elec - Roma,Auto Electrician - Roma</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Open,In Progress,Defer/Monitor</value>
    </filters>
    <filters>
        <field>Unit_of_Asset__c</field>
        <operation>equals</operation>
        <value>Transport - Roma,Depot - Roma</value>
    </filters>
    <label>Rma Auto Elecs</label>
</ListView>