force-app/main/default/objects/Job_Cards__c/listViews/By_Asset1.listView-meta.xml
<ListView>
    <fullName>By_Asset1</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>wd_projects__c</columns>
    <columns>Unit_of_Asset__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Details_of_Issue_Work_Requested__c</columns>
    <columns>Relevant_Dept__c</columns>
    <columns>Status__c</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Action__c</columns>
    <columns>Actionby__c</columns>
    <columns>Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Asset__c</field>
        <operation>contains</operation>
        <value>yq92wu</value>
    </filters>
    <filters>
        <field>Date_Created__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:730</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Fault_Report_Approved</value>
    </filters>
    <label>By Asset</label>
    <sharedTo>
        <group>Mechanics_Roma</group>
        <group>Projects_and_Maintenance</group>
    </sharedTo>
</ListView>