force-app/main/default/objects/Job_Cards__c/listViews/by_unit.listView-meta.xml
<ListView>
    <fullName>by_unit</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>Unit_of_Asset__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Type_of_Maintenance__c</columns>
    <columns>Details_of_Issue_Work_Requested__c</columns>
    <columns>Comments__c</columns>
    <columns>Relevant_Dept__c</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Actionby__c</columns>
    <columns>Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Created__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:730</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Fault_Report_Approved,Job_Cards__c.Scheduled_Service</value>
    </filters>
    <filters>
        <field>Relevant_Dept__c</field>
        <operation>notEqual</operation>
        <value>Electrical - Roma,Fabrication - Roma,NDT - Roma,General - Roma,Mechanical - Moomba,Auto Electrician - Moomba,Electrical - Moomba,Fabrication - Mooma,NDT - Moomba,General - Moomba</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>contains</operation>
        <value>In Action</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Requested,Not Approved,Stacked,Defer/Monitor,Completed,Not Required</value>
    </filters>
    <label>By Unit| In Action</label>
    <sharedTo>
        <group>Finance</group>
        <group>Mechanics_Roma</group>
    </sharedTo>
</ListView>