force-app/main/default/objects/Job_Cards__c/listViews/C01_FR_Gen_Incomplete.listView-meta.xml
<ListView>
    <fullName>C01_FR_Gen_Incomplete</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_of_Asset__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Details_of_Issue_Work_Requested__c</columns>
    <columns>Managed_By__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Parts_Dispatch_Date__c</columns>
    <columns>Parts_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_of_Asset__c</field>
        <operation>equals</operation>
        <value>Camp 1</value>
    </filters>
    <filters>
        <field>Date_Created__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:730</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Fault_Report_Pre_Approval,Job_Cards__c.Fault_Report_Approved</value>
    </filters>
    <filters>
        <field>Relevant_Dept__c</field>
        <operation>equals</operation>
        <value>General - Moomba,General</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Open,In Progress,Defer/Monitor</value>
    </filters>
    <label>C01 | FR Gen | Incomplete</label>
    <sharedTo>
        <group>Camp_1</group>
        <group>Camp_Supervisor</group>
        <group>Fabrication</group>
        <group>Rig_6</group>
        <group>Safety</group>
    </sharedTo>
</ListView>