force-app/main/default/objects/Job_Cards__c/listViews/C01_SV_Mech_Incomplete.listView-meta.xml
<ListView>
    <fullName>C01_SV_Mech_Incomplete</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>NHVAS_Asset__c</columns>
    <columns>Type_of_Maintenance__c</columns>
    <columns>Odometer_Current__c</columns>
    <columns>Engine_Hrs_Current__c</columns>
    <columns>Status__c</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Action__c</columns>
    <columns>Actionby__c</columns>
    <columns>Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_of_Asset__c</field>
        <operation>equals</operation>
        <value>camp 1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Scheduled_Service</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Open,In Progress,Defer/Monitor</value>
    </filters>
    <label>C01 | SV Mech | Incomplete</label>
    <sharedTo>
        <group>Camp_1</group>
        <group>Camp_Supervisor</group>
        <group>Mechanics_Moomba</group>
        <group>Safety</group>
    </sharedTo>
</ListView>