force-app/main/default/objects/Job_Cards__c/listViews/C02_FR_Elec_Incomplete.listView-meta.xml
<ListView>
    <fullName>C02_FR_Elec_Incomplete</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_of_Asset__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Details_of_Issue_Work_Requested__c</columns>
    <columns>Managed_By__c</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Parts_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_of_Asset__c</field>
        <operation>equals</operation>
        <value>camp 2</value>
    </filters>
    <filters>
        <field>Date_Created__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:730</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Fault_Report_Pre_Approval,Job_Cards__c.Fault_Report_Approved</value>
    </filters>
    <filters>
        <field>Relevant_Dept__c</field>
        <operation>equals</operation>
        <value>Electrical - Moomba,Electrical - Roma,Electrical</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Open,Defer/Monitor,In Progress</value>
    </filters>
    <label>C02 | FR Elec | Incomplete</label>
    <sharedTo>
        <group>Camp_2</group>
        <group>Camp_Supervisor</group>
        <group>Electrician</group>
        <group>Safety</group>
    </sharedTo>
</ListView>