force-app/main/default/objects/Job_Cards__c/listViews/C02_FR_Mech_Incomplete.listView-meta.xml
<ListView>
    <fullName>C02_FR_Mech_Incomplete</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_of_Asset__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Details_of_Issue_Work_Requested__c</columns>
    <columns>Managed_By__c</columns>
    <columns>Parts_Received_in_Stores__c</columns>
    <columns>Parts_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_of_Asset__c</field>
        <operation>contains</operation>
        <value>Camp 2</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Cards__c.Fault_Report_Pre_Approval,Job_Cards__c.Fault_Report_Approved</value>
    </filters>
    <filters>
        <field>Relevant_Dept__c</field>
        <operation>equals</operation>
        <value>Mechanical - Moomba,Mechanical - Roma,Mechanical</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Open,In Progress,Defer/Monitor</value>
    </filters>
    <label>C02 | FR Mech / AE | Incomplete</label>
    <sharedTo>
        <group>Camp_2</group>
    </sharedTo>
</ListView>